<resources>
    <string name="name" translatable="false">Osm Contributor</string>
    <string name="title_activity_edit_poi">EditPoiActivity</string>
    <string name="location_not_found">Couldn\'t find your location</string>
    <string name="addValueDialogTitle">Change value for: \"%1$s\"</string>
    <string name="addValueDialogAdd">Change</string>
    <string name="addValueDialogCancel">Cancel</string>
    <string name="title_activity_pick_value" translatable="false">PickValueActivity</string>
    <string name="uncompleted_fields">There are uncompleted fields</string>
    <string name="not_any_changes">There is not any changes</string>
    <string name="quit_edition_title">Quit edition</string>
    <string name="quit_edition_message">Do you really want to discard your changes ?</string>
    <string name="quit_edition_positive_btn">Yes</string>
    <string name="quit_edition_negative_btn">Cancel</string>
    <string name="no_values_yet">No values yet</string>
    <string name="creation_title">Creation</string>
    <string name="edition_title">Edition</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="add_tag">Add a tag</string>
    <string name="tag_key">Key</string>
    <string name="tag_value">Value</string>
    <string name="no_poi_name">This POI doesn\'t have a name</string>
    <string name="edit_position">Change position</string>
    <string name="edit_poi">Edit Poi</string>
    <string name="duplicate_poi">Duplicate Poi</string>
    <plurals name="update_done">
        <item quantity="one">%1$s points updated on OSM.</item>
        <item quantity="other">%1$s points updated on OSM.</item>
    </plurals>
    <plurals name="delete_done">
        <item quantity="one">%1$s points deleted on OSM.</item>
        <item quantity="other">%1$s points deleted on OSM.</item>
    </plurals>
    <plurals name="noderef_moved">
        <item quantity="one">%1$s point updated on OSM, refresh the map in a few minutes to see your changes.</item>
        <item quantity="other">%1$s points updated on OSM, refresh the map in a few minutes to see your changes.</item>
    </plurals>
    <plurals name="add_done">
        <item quantity="one">%1$s Poi added on OSM.</item>
        <item quantity="other">%1$s Pois added on OSM.</item>
    </plurals>
    <string name="couldnt_connect_retrofit">Couldn\’t add/update. Check your login/password in your preferences.</string>
    <string name="couldnt_create_node">There was an error during creation, your changes have been reverted.</string>
    <string name="couldnt_update_node">There was an error during the update, your changes have been reverted.</string>
    <string name="couldnt_download_retrofit">Couldn\’t download POIs. Check your connectivity.</string>
    <string name="couldnt_upload_retrofit">Couldn\’t upload POIs. Check your connectivity.</string>
    <string name="edit_poi_position">Change Poi position</string>
    <string name="edit_way_title">Edit way</string>
    <string name="edit_noderef_position_title">Edit position</string>
    <string name="poi_creation">POI Creation</string>
    <string name="note_creation">Note Creation</string>
    <string name="delete_poi">Delete Poi</string>
    <string name="add_poi">Add Poi</string>
    <string name="delete_poi_title">Delete Poi</string>
    <string name="delete_poi_confirm_message">Do you really want to delete this poi?</string>
    <string name="delete_poi_positive_btn">Delete</string>
    <string name="delete_poi_negative_btn">Cancel</string>
    <string name="point_modification_forbidden">This version doesn\'t allowed points modification</string>
    <string name="licenses_title">Licenses</string>
    <string name="osm_copyright" translatable="false"><![CDATA[<font color=\"#000\">© </font><font color=\"#1565C0\">OpenStreetMap </font><font color=\"#000\">contributors</font>]]></string>
    <string name="zoom_to_edit">This area is too large to load, please zoom more.</string>
    <string name="download_in_progress">Download in progress of all pois and notes of the displayed zone</string>
    <string name="switch_style_satellite">Satellite view</string>
    <string name="switch_style_mapnik">Mapnik view</string>
    <string name="switch_style_default">Default view</string>
    <string name="zoom_more">You need to zoom more in order to download Pois</string>
    <string name="search_poitype_hint">Search a Poi type</string>
    <string name="title_3d_view">3D view</string>
    <string name="arpi_not_supported">Your device do not support the 3D view</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="splash_screen_message">Initialization in progress&#8230;</string>
    <string name="splash_screen_edited_by" translatable="false"><![CDATA[<font color=\"#ffffff\">Edited by </font><font color=\"#2196f3\">eBusiness Information</font>]]></string>
    <string name="splash_screen_powered_by" translatable="false"><![CDATA[<font color=\"#ffffff\">Powered by </font><font color=\"#2196f3\">Jawg</font>]]></string>
    <string name="mapsquare" translatable="false"><![CDATA[By jawg<font color=\"#2196f3\">maps</font>]]></string>
    <string name="title_activity_my_preferences">Parameters</string>
    <string name="summary_login">Please provide a login</string>
    <string name="summary_password">Please provide a password</string>
    <string name="error_login">Couldn’t connect with these credentials. Are you sure you have editing rights?</string>
    <string name="error_first_login">Couldn’t connect with these credentials.</string>
    <string name="valid_login">Successfully connected</string>
    <string name="reset_title">Reset the database</string>
    <string name="reset_summary">Remove all the Pois from the database</string>
    <string name="reset_type_title">Reset the poi types</string>
    <string name="reset_type_summary">Reset the poi types and remove all the Pois from the database</string>
    <string name="expert_mode_summary">Allow you to manage Poi Types</string>
    <string name="expert_mode_title">Expert mode</string>
    <string name="reset_dialog_message">Are you sure you want to reset the database? All your unsaved modifications will be lost.</string>
    <string name="reset_dialog_positive_button">Yes</string>
    <string name="reset_dialog_negative_button">Cancel</string>
    <string name="reset_success">The database was successfully reset</string>
    <string name="reset_failure">There was an error during the reset of the database</string>
    <string name="expert_mode_dialog">You are entering the expert mode. You will be able to create, update or delete poi types and completely edit the Pois.</string>
    <string name="ok">OK</string>
    <string name="shared_prefs_login" translatable="false">SHARED_PREFS_LOGIN</string>
    <string name="shared_prefs_password" translatable="false">SHARED_PREFS_PASSWORD</string>
    <string name="shared_prefs_first_connection" translatable="false">SHARED_PREFS_FIRST_CONNECTION</string>
    <string name="shared_prefs_token" translatable="false">SHARED_PREFS_TOKEN</string>
    <string name="shared_prefs_token_secret" translatable="false">SHARED_PREFS_TOKEN_SECRET</string>
    <string name="shared_prefs_consumer" translatable="false">SHARED_PREFS_CONSUMER</string>
    <string name="shared_prefs_consumer_secret" translatable="false">SHARED_PREFS_CONSUMER_SECRET</string>
    <string name="shared_prefs_server_key" translatable="false">SHARED_PREFS_SERVER_KEY</string>
    <string name="shared_prefs_google_connection_key" translatable="false">SHARED_PREFS_GOOLE_CONNECTION</string>
    <string name="shared_prefs_google_connection">Login with Google</string>
    <string name="shared_prefs_reset" translatable="false">SHARED_PREFS_RESET</string>
    <string name="shared_prefs_reset_type" translatable="false">SHARED_PREFS_RESET_TYPE</string>
    <string name="shared_prefs_expert_mode" translatable="false">SHARED_PREFS_EXPERT</string>
    <string name="shared_prefs_h2geo_version" translatable="false">SHARED_PREFS_H2GEO_VERSION</string>
    <string name="shared_prefs_h2geo_date" translatable="false">SHARED_PREFS_H2GEO_DATE</string>
    <string name="easter_egg" translatable="false">EASTER_EGG</string>
    <string name="shared_prefs_h2geo_title" translatable="false">H2Geo</string>
    <string name="shared_prefs_login_title" translatable="false">Connection</string>
    <string name="shared_prefs_server" translatable="false">OSM Server</string>
    <string name="shared_prefs_oauth_token_flickr" translatable="false">oauthTokenFlickr</string>
    <string name="shared_prefs_oauth_token_secret_flickr" translatable="false">oauthTokenSecretFlickr</string>
    <string name="shared_prefs_preset_default" translatable="false">presetDefault</string>
    <string name="shared_prefs_preset_selected" translatable="false">presetSelected</string>
    <string name="login_google_error">This Google account cannot be used for login.\n
        You can try logging in with your OpenStreetMap username and password.\n\n
        If you would like to use your google account to Login, please add it as a new account in your Android user preferences.</string>
    <string name="login_title">Connection</string>
    <string name="tuto_text_press_create">Click here to add a new point</string>
    <string name="tuto_text_choose_type">Choose the type of Poi you want to add</string>
    <string name="tuto_text_confirm_position_creation">Click to confirm the position, any return will discard your creation.</string>
    <string name="tuto_text_confirm_creation">Click to finalize your creation or edition.</string>
    <string name="replay_tuto">Replay tutorial</string>
    <string name="replay_tuto_info">Tutorials will be replayed</string>
    <string name="tuto_text_synchronized">Gray icons are not synchronized</string>
    <string name="tuto_text_clic_to_synchronized">You can sync your changes at any time from this menu</string>
    <string name="tuto_text_cancel_sync">You can cancel one or more of your changes here</string>
    <string name="tuto_text_comment">Before saving, comment your changes</string>
    <string name="tuto_text_confirm_sync">You can validate and synchronize your changes</string>
    <string name="Note">Note</string>
    <string name="comment_text_hint">Enter a comment</string>
    <string name="comment_label">Comment</string>
    <string name="action_label">Action</string>
    <string name="quit_note_title">Quit comment edition</string>
    <string name="quit_note_message">Do you really want to discard your changes ?</string>
    <string name="quit_note_positive_btn">Yes</string>
    <string name="quit_note_negative_btn">Cancel</string>
    <string name="comment_text_cant_be_null">The comment text cant\'t be null</string>
    <string name="comment_synchronizing">Please wait for synchronization to finish.</string>
    <string name="save_note">Save</string>
    <string name="synchronizing">Synchronizing&#8230;</string>
    <string name="note_already_closed">Note was already closed</string>
    <string name="title_activity_note">Note</string>
    <string name="note">Note</string>
    <string name="title_note">Note (%s)</string>
    <string name="title_creation_note">Note</string>
    <string name="create_note">Create</string>
    <string name="cancel">Cancel</string>
    <string name="note_spinner_element">Note</string>
    <string name="failed_apply_comment">Failed to add the comment, check your connection and your credentials</string>
    <string name="filters">Filters</string>
    <string name="filter_accessibility">Accessibility</string>
    <string name="filter_accessibility_yes">Accessible</string>
    <string name="filter_accessibility_limited">Hardly Accessible</string>
    <string name="filter_accessibility_no">Not Accessible</string>
    <string name="filter_accessibility_unknown">Accessibility Unknown</string>
</resources>