<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:inputType="none"
        android:key="@string/shared_prefs_google_connection_key"
        android:title="@string/shared_prefs_google_connection"
        android:icon="@drawable/ic_google"/>

    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="@string/shared_prefs_login"
        android:summary="@string/summary_login"
        android:title="@string/prompt_login"/>

    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/shared_prefs_password"
        android:summary="@string/summary_password"
        android:title="@string/prompt_password"/>

    <Preference
        android:inputType="none"
        android:key="@string/shared_prefs_server_key"
        android:title="@string/shared_prefs_server"/>

</PreferenceScreen>