<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <CheckBoxPreference
        android:key="@string/shared_prefs_expert_mode"
        android:summary="@string/expert_mode_summary"
        android:title="@string/expert_mode_title"
        android:visibility="gone"/>

    <Preference
        android:key="@string/shared_prefs_reset"
        android:summary="@string/reset_summary"
        android:title="@string/reset_title"/>

    <Preference
        android:key="@string/shared_prefs_reset_type"
        android:summary="@string/reset_type_summary"
        android:title="@string/reset_type_title"/>

    <PreferenceCategory
        android:title="Temporaire">

        <Preference
            android:inputType="none"
            android:key="@string/shared_prefs_h2geo_version"
            android:title="Version"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/shared_prefs_h2geo_title">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_langage_titles"
        android:entryValues="@array/pref_langage_values"
        android:key="langage_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_langage" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="s_localisation"
        android:title="@string/activate_Localisation" />
    </PreferenceCategory>
</PreferenceScreen>
