<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_sync"
        android:title="@string/Synchronisation_title"
        android:summary="@string/Synchronisation_value"/>

    <ListPreference
        android:defaultValue="300000"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

    <Preference
        android:inputType="none"
        android:key="@string/shared_prefs_google_connection_key"
        android:title="@string/shared_prefs_google_connection"
        android:icon="@drawable/ic_google"/>

    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="@string/shared_prefs_login"
        android:summary="@string/summary_login"
        android:title="@string/prompt_login"/>

    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/shared_prefs_password"
        android:summary="@string/summary_password"
        android:title="@string/prompt_password"/>

    <Preference
        android:inputType="none"
        android:key="@string/shared_prefs_server_key"
        android:title="@string/shared_prefs_server"/>

</PreferenceScreen>
